# elegan-c

./: .travis.yml
include/safe-c/: safe_memory.h  safe_string.h
src/: safe_memory.c  safe_string.c
tests/: CMakeLists.txt
tests/safe_string/: CMakeLists.txt  copy_string.c
